--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Switching to helloWorld-Surge Branch
       - uses: actions/checkout@v2
         with:
-          reg: helloWorld-Surge
+          ref: helloWorld-Surge
       - name: Install Node.js
         uses: actions/setup-node@v1.4.2
       - name: Install Surge
