--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,7 @@
 name: Deploy Website
 
-on:
-  push:
-    branches: [ helloWorld-Surge ]
+on: [push]
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -12,10 +11,12 @@ jobs:
         with:
           ref: helloWorld-Surge
       - name: Install Node.js
-        uses: actions/setup-node@v1.4.2
+        uses: actions/setup-node@v2-beta
+        with:
+          node-version: 12
       - name: Install Surge
         run: npm install -g surge
       - name: Run surge
-        run: surge ./ HelloWorld-v1.surge.sh.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+        run: surge ./ helloworld-v1.surge.sh --token ${{ secrets.SURGE_TOKEN }}
 
           
